<resources>
    <string name="app_name">TravelLog</string>

    <!-- Generales -->
    <string name="txtSi">Sí</string>
    <string name="txtNo">No</string>
    <string name="txtEliminar">Eliminar</string>
    <string name="txtLogo">Logo de TravelLog</string>

    <!-- fragment_home strings -->
    <string name="viaja">Viaja</string>
    <string name="suena">Sueña</string>
    <string name="disfruta">Disfruta</string>
    <string name="experiencias">¡Y guarda todas tus experiencias en TravelLog!</string>

    <!-- fragment_viajes strings -->
    <string name="tvViajes">Mis viajes</string>

    <!-- fragment_anadir_viaje strings -->
    <string name="tvAnadirViaje">Añadir Viaje</string>
    <string name="tvLugar">Lugar</string>
    <string name="hintLugar">Introduce el lugar</string>
    <string name="tvDescripcion">Descripción</string>
    <string name="hintDescripcion">Introduce una descripción</string>
    <string name="tvFoto">Foto</string>
    <string name="btnAnadirFoto">Añadir foto</string>
    <string name="btnGuardarViaje">Guardar viaje</string>
    <string name="foto_anadida">Foto añadida. Pulsa para cambiar</string>
    <string name="validacion">Lugar y descripción son obligatorios</string>

    <!-- fragment_viajes_pendientes strings -->
    <string name="tvViajesPendientes">Viajes pendientes</string>
    <string name="hintIntroduceLugarViajesPendientes">Introduce un lugar</string>
    <string name="btnAnadir">Añadir</string>

    <!-- fragment_anadir_viaje strings -->
    <string name="btnEliminarViaje">Eliminar viaje</string>

    <!-- ViajeFragment strings -->
    <string name="txtViajeNoEncontrado">Viaje no encontrado</string>
    <string name="txtViajeEliminado">Viaje eliminado</string>
    <string name="txtConfirmacionEliminacion">¿Estás seguro/a de que deseas eliminar este viaje?</string>

    <!-- menu strings -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menuVerViajes">Ver viajes</string>
    <string name="menuAnadirViaje">Añadir viaje</string>
    <string name="menuViajesPendientes">Pendientes</string>
    <string name="foto_del_viaje">Foto del viaje</string>
    <string name="viajes_pendientes">Viajes pendientes</string>
    <string name="eliminar_viaje">Eliminar viaje</string>
</resources>