<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<!-- Cambiado en showAsAction "always" por ifRoom" ya que de esta manera, en pantallas estrechas se vería de forma vertical (sin verse cortado) -->
<item
    android:id="@+id/viajesFragment"
    android:icon="@drawable/iconoviajes"
    android:title="@string/menuVerViajes"
    app:showAsAction="ifRoom" />

<item
    android:id="@+id/anadirViajeFragment"
    android:icon="@drawable/iconoanadirviaje"
    android:title="@string/menuAnadirViaje"
    app:showAsAction="ifRoom" />

<item
    android:id="@+id/viajesPendientesFragment"
    android:icon="@drawable/iconoviajespendientes"
    android:title="@string/menuViajesPendientes"
    app:showAsAction="ifRoom" />

</menu>