<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="1dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="1dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/viajes_pendientes"
            android:textSize="30sp"/>

        <!-- Campo para añadir un nuevo viaje pendiente -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="4dp">

            <EditText
                android:id="@+id/etNuevoViajePendiente"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="location"
                android:hint="@string/hintIntroduceLugarViajesPendientes"
                android:inputType="text"
                android:padding="16dp"/>

            <Button
                android:id="@+id/btnAgregarViajePendiente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnAnadir" />
        </LinearLayout>

        <!-- Lista de viajes pendientes -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvViajesPendientes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical" />

        <!-- Espacio para que no se tape el contenido por el menú inferior -->
        <View
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="100dp"/>
    </LinearLayout>
</ScrollView>