
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fondohome"
    android:gravity="center"
    >

    <View
        android:layout_width="wrap_content"
        android:layout_height="30dp" />

    <TextView
        android:id="@+id/textViewViaja"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/viaja"
        android:textColor="#ffde59"
        android:textSize="25sp"
        android:visibility="gone"
        android:layout_marginTop="5dp"
        android:shadowColor="#000000"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="5"
        android:lineSpacingExtra="2sp"/>

    <TextView
        android:id="@+id/textViewSuena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/suena"
        android:textColor="#ffde59"
        android:textSize="25sp"
        android:visibility="gone"
        android:layout_marginTop="5dp"
        android:shadowColor="#000000"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="5"
        android:lineSpacingExtra="2sp"/>

    <TextView
        android:id="@+id/textViewDisfruta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disfruta"
        android:textColor="#ffde59"
        android:textSize="25sp"
        android:visibility="gone"
        android:layout_marginTop="5dp"
        android:shadowColor="#000000"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="5"
        android:lineSpacingExtra="2sp"/>

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@drawable/travelloglogo"
        android:layout_gravity="center"
        android:contentDescription="@string/txtLogo"/>

    <TextView
        android:id="@+id/textViewExperiencias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/experiencias"
        android:textSize="20sp"
        android:gravity="center_horizontal|bottom"
        android:layout_marginTop="20dp"
        android:textColor="#164196"
        android:shadowColor="#ffffff"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="40"/>

    <View
        android:layout_width="wrap_content"
        android:layout_height="100dp" />

</LinearLayout>


<!--Código previo con error en móvil que no mostraba bien el texto del eslogan-->
<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--android:layout_width="match_parent"-->
<!--android:layout_height="match_parent"-->
<!--    android:orientation="vertical"-->
<!--    android:background="@drawable/fondohome"-->
<!--android:gravity="center"-->
<!--&gt;-->

<!--    <View-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="30dp" />-->

<!--<TextView-->
<!--    android:id="@+id/textViewViaja"-->
<!--    android:layout_width="wrap_content"-->
<!--    android:layout_height="wrap_content"-->
<!--    android:text="@string/viaja"-->
<!--    android:textColor="#ffde59"-->
<!--    android:textSize="25sp"-->
<!--    android:visibility="gone"-->
<!--    android:layout_centerHorizontal="true"-->
<!--    android:layout_marginTop="5dp"-->
<!--    android:shadowColor="#000000"-->
<!--    android:shadowDx="3"-->
<!--    android:shadowDy="3"-->
<!--    android:shadowRadius="5"-->
<!--    android:lineSpacingExtra="2sp"/>-->

<!--<TextView-->
<!--    android:id="@+id/textViewSuena"-->
<!--    android:layout_width="wrap_content"-->
<!--    android:layout_height="wrap_content"-->
<!--    android:text="@string/suena"-->
<!--    android:textColor="#ffde59"-->
<!--    android:textSize="25sp"-->
<!--    android:visibility="gone"-->
<!--    android:layout_below="@id/textViewViaja"-->
<!--    android:layout_centerHorizontal="true"-->
<!--    android:layout_marginTop="5dp"-->
<!--    android:shadowColor="#000000"-->
<!--    android:shadowDx="3"-->
<!--    android:shadowDy="3"-->
<!--    android:shadowRadius="5"-->
<!--    android:lineSpacingExtra="2sp"/>-->

<!--<TextView-->
<!--    android:id="@+id/textViewDisfruta"-->
<!--    android:layout_width="wrap_content"-->
<!--    android:layout_height="wrap_content"-->
<!--    android:text="@string/disfruta"-->
<!--    android:textColor="#ffde59"-->
<!--    android:textSize="25sp"-->
<!--    android:visibility="gone"-->
<!--    android:layout_below="@id/textViewSuena"-->
<!--    android:layout_centerHorizontal="true"-->
<!--    android:layout_marginTop="5dp"-->
<!--    android:shadowColor="#000000"-->
<!--    android:shadowDx="3"-->
<!--    android:shadowDy="3"-->
<!--    android:shadowRadius="5"-->
<!--    android:lineSpacingExtra="2sp"/>-->

<!--    <ImageView-->
<!--        android:id="@+id/logoImage"-->
<!--        android:layout_width="300dp"-->
<!--        android:layout_height="300dp"-->
<!--        android:src="@drawable/travelloglogo"-->
<!--        android:layout_below="@id/textViewExperiencias"-->
<!--        android:layout_gravity="center"/>-->

<!--    <TextView-->
<!--        android:id="@+id/textViewExperiencias"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/experiencias"-->
<!--        android:textSize="20sp"-->
<!--        android:gravity="center_horizontal|bottom"-->
<!--        android:layout_below="@id/textViewDisfruta"-->
<!--        android:layout_centerHorizontal="true"-->
<!--        android:layout_marginTop="20dp"-->
<!--        android:textColor="#164196"-->
<!--    android:shadowColor="#66000000"-->
<!--    android:shadowDx="0"-->
<!--    android:shadowDy="0"-->
<!--    android:shadowRadius="5"-->
<!--    android:maxLines="1"-->
<!--    android:ellipsize="end" />-->

<!--<View-->
<!--    android:layout_width="wrap_content"-->
<!--    android:layout_height="100dp" />-->
<!--</LinearLayout>-->



